Added css instructions and small caps font

--- a/lit/tex4ht-fonts-kpfonts.tex
+++ b/lit/tex4ht-fonts-kpfonts.tex
@@ -690,14 +690,22 @@ jkpmi 0 239
 
 \<jkpmit8t\><<<
 .ptmri8t
+htfcss:  jkpmit8t  font-style: italic;
 >>>
 \AddFont{jkpmit8t}{unicode/kpfonts/jkpmit8t}
 
 \<jkpbn8t\><<<
 .ptmb8t
+htfcss:  jkpbn8t  font-weight:bold;
 >>>
 
 \AddFont{jkpbn8t}{unicode/kpfonts/jkpbn8t}
 
+\<jkpmsc8t\><<<
+.lm-ec
+htfcss:  jkpmsc8t font-variant: small-caps;
+>>>
 
+
+\AddFont{jkpmsc8t}{unicode/kpfonts/jkpmsc8t}
 \bye
