add configuration for jkpbsy font. Fix path for aliases.

--- a/lit/tex4ht-fonts-kpfonts.tex
+++ b/lit/tex4ht-fonts-kpfonts.tex
@@ -408,6 +408,12 @@ jkpsy 0 128
 
 \AddFont{jkpsy}{unicode/kpfonts/jkpsy}
 
+\<jkpbsy\><<<
+.jkpsy
+htfcss: jkpbsy font-weight: bold;
+>>>
+
+\AddFont{jkpbsy}{alias/kpfonts/jkbpsy}
 
 
 
@@ -681,25 +687,25 @@ jkpmi 0 239
 \<jkpmn7t\><<<
 .ptmr7t
 >>>
-\AddFont{jkpmn7t}{unicode/kpfonts/jkpmn7t}
+\AddFont{jkpmn7t}{alias/kpfonts/jkpmn7t}
 
 \<jkpmn8t\><<<
 .ptmr8t
 >>>
-\AddFont{jkpmn8t}{unicode/kpfonts/jkpmn8t}
+\AddFont{jkpmn8t}{alias/kpfonts/jkpmn8t}
 
 \<jkpmit8t\><<<
 .ptmri8t
 htfcss:  jkpmit8t  font-style: italic;
 >>>
-\AddFont{jkpmit8t}{unicode/kpfonts/jkpmit8t}
+\AddFont{jkpmit8t}{alias/kpfonts/jkpmit8t}
 
 \<jkpbn8t\><<<
 .ptmb8t
 htfcss:  jkpbn8t  font-weight:bold;
 >>>
 
-\AddFont{jkpbn8t}{unicode/kpfonts/jkpbn8t}
+\AddFont{jkpbn8t}{alias/kpfonts/jkpbn8t}
 
 \<jkpmsc8t\><<<
 .lm-ec
@@ -707,5 +713,5 @@ htfcss:  jkpmsc8t font-variant: small-caps;
 >>>
 
 
-\AddFont{jkpmsc8t}{unicode/kpfonts/jkpmsc8t}
+\AddFont{jkpmsc8t}{alias/kpfonts/jkpmsc8t}
 \bye
